Try to fix problem.